[gd_scene load_steps=9 format=3 uid="uid://c166s6wclejou"]

[ext_resource type="Script" uid="uid://eddw4dtnitsd" path="res://scenes/tech/scr_dialtest.gd" id="1_6l3xu"]
[ext_resource type="PackedScene" uid="uid://8e6qtrpg4jaf" path="res://scenes/gui/scn_dialogue_box.tscn" id="2_hajom"]
[ext_resource type="Theme" uid="uid://wknpxv3x21lw" path="res://resources/thm_main_ui.tres" id="3_ik2m6"]
[ext_resource type="Texture2D" uid="uid://cvy1i8jmiqbbb" path="res://sprites/characters/portraits/spr_portrait_greg.png" id="4_opqf6"]
[ext_resource type="Script" uid="uid://cmin2i5j7iysd" path="res://scenes/tech/scr_reference_button.gd" id="5_st468"]
[ext_resource type="Texture2D" uid="uid://da2os5pe7n7xn" path="res://sprites/gui/spr_gui.png" id="6_qwrfr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ofmxd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i3s8v"]
bg_color = Color(0, 0, 0, 1)

[node name="Dialtest" type="Node2D"]
script = ExtResource("1_6l3xu")

[node name="FirstScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="FirstScreen"]
layout_mode = 0
offset_right = 160.0
offset_bottom = 11.0
text = "welcome to the dialogue test! eat my ass"
clip_text = true

[node name="SearchMenu" type="LineEdit" parent="FirstScreen"]
layout_mode = 0
offset_left = 1.0
offset_top = 8.0
offset_right = 144.0
offset_bottom = 21.0
placeholder_text = "search dialogue name"
context_menu_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false

[node name="ScrollContainer" type="ScrollContainer" parent="FirstScreen"]
layout_mode = 0
offset_left = 2.0
offset_top = 23.0
offset_right = 159.0
offset_bottom = 118.0
horizontal_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="FirstScreen/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 1

[node name="VBoxContainer" type="VBoxContainer" parent="FirstScreen/ScrollContainer/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="FirstScreen/ScrollContainer/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="DialogueBox" parent="." instance=ExtResource("2_hajom")]
visible = false

[node name="ScreenSwitch" type="Button" parent="."]
offset_left = 142.0
offset_top = 8.0
offset_right = 158.0
offset_bottom = 20.0
text = ">"

[node name="SecondScreen" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DialogueBox2" type="Node2D" parent="SecondScreen"]
z_index = 11
position = Vector2(0, 62)

[node name="DialogueBoxPanel" type="Panel" parent="SecondScreen/DialogueBox2"]
offset_left = 10.0
offset_right = 148.0
offset_bottom = 28.0
theme = ExtResource("3_ik2m6")

[node name="TextEdit" type="TextEdit" parent="SecondScreen/DialogueBox2/DialogueBoxPanel"]
layout_mode = 0
offset_left = 2.0
offset_top = 3.0
offset_right = 138.0
offset_bottom = 26.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/line_spacing = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_ofmxd")
context_menu_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
wrap_mode = 1

[node name="PortraitSprite" type="Sprite2D" parent="SecondScreen/DialogueBox2/DialogueBoxPanel"]
visible = false
position = Vector2(3, 3)
texture = ExtResource("4_opqf6")
centered = false

[node name="ScrollContainer" type="ScrollContainer" parent="SecondScreen/DialogueBox2/DialogueBoxPanel"]
layout_mode = 0
offset_left = 98.0
offset_top = -35.0
offset_right = 138.0
theme_override_styles/panel = SubResource("StyleBoxFlat_i3s8v")
follow_focus = true
horizontal_scroll_mode = 0

[node name="ChoicesContainer" type="VBoxContainer" parent="SecondScreen/DialogueBox2/DialogueBoxPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="ReferenceButton" type="Button" parent="SecondScreen/DialogueBox2/DialogueBoxPanel"]
visible = false
layout_mode = 0
offset_right = 22.0
offset_bottom = 13.0
mouse_filter = 2
text = "greg"
flat = true
alignment = 0
script = ExtResource("5_st468")

[node name="FinishedMarker" type="Sprite2D" parent="SecondScreen/DialogueBox2/DialogueBoxPanel"]
position = Vector2(133, 23)
texture = ExtResource("6_qwrfr")
centered = false
region_enabled = true
region_rect = Rect2(16, 1, 3, 3)

[node name="DialogueSound" type="AudioStreamPlayer" parent="SecondScreen/DialogueBox2"]
max_polyphony = 32
bus = &"Speech"

[node name="CharacterChoice" type="OptionButton" parent="SecondScreen"]
layout_mode = 0
offset_left = 11.0
offset_top = 30.0
offset_right = 47.0
offset_bottom = 44.0
selected = 0
item_count = 1
popup/item_0/text = "empty"
popup/item_0/id = 0

[node name="GoButton" type="Button" parent="SecondScreen"]
layout_mode = 0
offset_left = 13.0
offset_top = 94.0
offset_right = 29.0
offset_bottom = 106.0
focus_mode = 0
text = ">"

[connection signal="text_submitted" from="FirstScreen/SearchMenu" to="." method="_on_text_edit_text_submitted"]
[connection signal="pressed" from="ScreenSwitch" to="." method="_on_screen_switch_pressed"]
[connection signal="item_selected" from="SecondScreen/CharacterChoice" to="." method="_on_character_choice_item_selected"]
[connection signal="pressed" from="SecondScreen/GoButton" to="." method="_on_go_button_pressed"]
